try to mobile first

--- a/index.html
+++ b/index.html
@@ -1,39 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | Intro section with dropdown navigation</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+  <nav>
+    <img src="./images/logo.svg" alt="" class="logo">
+    <img src="./images/icon-menu.svg" alt="">
+  </nav>
+  <div class="container">
+    <section class="left-section">
+      <img class="mobile-img" src="./images/image-hero-mobile.png" alt="">
+      <!-- Features
+    Company
+    Careers
+    About
 
-  Features
-  Company
-  Careers
-  About
+    Login
+    Register -->
+      <section class="about">
 
-  Login
-  Register
+        <h1>Make remote work</h1>
+        <p> Get your team in sync, no matter your location. Streamline processes,
+          create team rituals, and watch productivity soar.</p>
+        <button>
+          Learn more
 
-  Make remote work
+        </button>
 
-  Get your team in sync, no matter your location. Streamline processes, 
-  create team rituals, and watch productivity soar.
+      </section>
+      <section class="clients ">
+        <div class="clients-logo">
+          <img src="./images/client-databiz.svg" alt="" class="client">
+          <img src="/images/client-audiophile.svg" alt="" class="client">
+          <img src="/images/client-meet.svg" alt="" class="client">
+          <img src="/images/client-maker.svg" alt="" class="client">
+        </div>
+      </section>
+    </section>
+    <div class="right-section">
+      <img class="desktop-img" src="./images/image-hero-desktop.png" alt="">
+    </div>
 
-  Learn more
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
   </div>
+
 </body>
+
 </html>
