updating responsive design

--- a/index.html
+++ b/index.html
@@ -18,25 +18,21 @@
     <img src="./images/logo.svg" alt="" class="logo">
     <img src="./images/icon-menu.svg" alt="">
   </nav>
+  <img class="mobile-img" src="./images/image-hero-mobile.png" alt="">
   <div class="container">
     <section class="left-section">
-      <img class="mobile-img" src="./images/image-hero-mobile.png" alt="">
-      <!-- Features
-    Company
-    Careers
-    About
 
-    Login
-    Register -->
       <section class="about">
+        <div class="about-content">
+          <h1>Make remote work</h1>
+          <p> Get your team in sync, no matter your location. Streamline processes,
+            create team rituals, and watch productivity soar.</p>
+          <button>
+            Learn more
+          </button>
+        </div>
 
-        <h1>Make remote work</h1>
-        <p> Get your team in sync, no matter your location. Streamline processes,
-          create team rituals, and watch productivity soar.</p>
-        <button>
-          Learn more
 
-        </button>
 
       </section>
       <section class="clients ">
