adding Nav elements

--- a/index.html
+++ b/index.html
@@ -15,8 +15,23 @@
 
 <body>
   <nav>
-    <img src="./images/logo.svg" alt="" class="logo">
-    <img src="./images/icon-menu.svg" alt="">
+    <div class="left-side-nav">
+      <img src="./images/logo.svg" alt="" class="logo">
+      <div class="nav-links">
+        <ul>
+          <li class="nav-link"><a href="#">Features</a></li>
+          <li class="nav-link"><a href="#">Company</a></li>
+          <li class="nav-link"><a href="#">Careers</a></li>
+          <li class="nav-link"><a href="#">About</a></li>
+        </ul>
+      </div>
+
+    </div>
+    <div class="right-side-nav">
+      <button>Login</button>
+      <button>Register</button>
+    </div>
+    <img style="display:none" src="./images/icon-menu.svg" alt="">
   </nav>
   <img class="mobile-img" src="./images/image-hero-mobile.png" alt="">
   <div class="container">
