to finish on 15 June

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <div class="left-side-nav">
       <img src="./images/logo.svg" alt="" class="logo">
       <div class="nav-links hidden-on-mobile">
-        <ul>
-          <li class="nav-link"><a href="#">Features</a></li>
-          <li class="nav-link"><a href="#">Company</a></li>
-          <li class="nav-link"><a href="#">Careers</a></li>
-          <li class="nav-link"><a href="#">About</a></li>
-        </ul>
+        
+          <a href="#">Features</a>
+          <a href="#">Company</a>
+          <a href="#">Careers</a>
+          <a href="#">About</a>
+        
       </div>
 
     </div>
